subindo ajustes para infra da api nutri